[fix] Enable preview features when compiling the JDK21 variant